--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,9 +3,7 @@ version: 0.2
 phases:
   build:
     commands:
-      - chmod +x ./gradlew
       - ./gradlew assembleDebug
 artifacts:
   files:
-     - './android/app/build/outputs/**/*.apk'
-  discard-paths: yes
+    - app/build/outputs/apk/debug/app-debug.apk
